<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">随身健康监控</string>
    <string name="action_settings">Settings</string>
    <string name="bt_start">蓝牙连接</string>
    <string name="map_start">地图定位</string>
    <string name="sql_start">上传云端</string>
    <string name="alarm_start">设定闹钟</string>
    <string name="hello">欢迎使用,请选择对应功能</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_sql">SQL</string>
    <string name="name_in">输入名字</string>
    <string name="in">上传云端</string>
    <string name="id_out">搜索ID</string>
    <string name="out">执行搜索</string>
    <string name="title_activity_bt_main">BtMain</string>
    <string name="send">发送</string>
    <string name="device_state">设备未连接</string>
    <string name="input">输入信息</string>
    <string name="connect">搜索设备</string>
    <string name="discoverable">设置可见</string>
    <string name="scan">扫描设备</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">其他设备</string>
    <string name="not_connected">未连接到任何设备</string>
    <string name="title_connected_to">设备已连接</string>
    <string name="title_connecting">正在连接中</string>
    <string name="title_listening">设备接收</string>
    <string name="title_not_connected">设备未连接</string>
    <string name="bt_off">蓝牙未开启</string>
    <string name="none_paired">无配对设备</string>
    <string name="scanning">搜索设备</string>
    <string name="select_device">选择设备</string>
    <string name="none_found">未找到设备</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="set_alarm">设定闹钟</string>
    <string name="hello_alarm">请设定闹钟</string>
    <string name="title_activity_alarm_do">闹钟响</string>
    <string name="title_activity_bt_device_list">蓝牙设备</string>
    <string name="title_activity_bt_service">BtService</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="reg">成功注册,请登录!</string>
    <string name="log_t">成功登录!</string>
    <string name="log_f">不存在用户,请先注册!</string>

</resources>
