<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Entrance" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello" 
        />
<Button 
    android:id="@+id/bt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/bt_start"
    android:layout_below="@+id/welcome"
    />
<Button 
    android:id="@+id/map"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/map_start"
    android:layout_below="@+id/bt"
    />
<Button 
    android:id="@+id/sql"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sql_start"
    android:layout_below="@+id/map"
    />
<Button 
    android:id="@+id/alarm"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/alarm_start"
    android:layout_below="@+id/sql"
    />
</RelativeLayout>
